--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
                 <nav class="menu">
                     <ul class="menu-list">
                         <li class="menu-item">
-                            <a href="http://">Почему у нас</a>
+                            <a data-link="why">Почему у нас</a>
                         </li>
                         <li class="menu-item">
-                            <a href="http://">Меню бургеров</a>
+                            <a data-link="products">Меню бургеров</a>
                         </li>
                         <li class="menu-item">
-                            <a href="http://">Оформление заказа</a>
+                            <a data-link="order">Оформление заказа</a>
                         </li>
                     </ul>
                 </nav>
-                <div class="currency" title="Изменить валюту">$</div>
+                <div class="currency" title="Изменить валюту" id="change-currency">$</div>
             </div>
         </header> 
         
@@ -42,7 +42,7 @@
                         Готовим для вас лучшие бургеры в городе из отборной мраморной говядины.
                     </p>
                     <div class="main-action">
-                        <button class="button">Смотреть меню</button>
+                        <button class="button" id="main-action-button">Смотреть меню</button>
                     </div>
                 </div>
                 <img src="images/main-burger.png" alt="Бургер" class="main-image"> 
@@ -51,12 +51,12 @@
         
     </section>
 
-    <section class="why">
+    <section class="why" id="why">
         <div class="container">
             <div class="why-title common-title">почему нас выбирают?</div>
             <div class="why-items">
                 <div class="why-item">
-                    <img src="/images/burger.png" alt="burger" class="why-item-image">
+                    <img src="images/burger.png" alt="burger" class="why-item-image">
                     <div class="why-item-title">Авторские рецепты</div>
                     <div class="why-item-text">
                         Наши бургеры обладают уникальным сочетанием вкусов и 
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="why-item">
-                    <img src="/images/meat.png" alt="meat" class="why-item-image">
+                    <img src="images/meat.png" alt="meat" class="why-item-image">
                     <div class="why-item-title">Мраморная говядина</div>
                     <div class="why-item-text">
                         Для наших бургеров мы используем отборную 100% мраморную 
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="why-item">
-                    <img src="/images/truck.png" alt="foodtrack" class="why-item-image">
+                    <img src="images/truck.png" alt="foodtrack" class="why-item-image">
                     <div class="why-item-title">Быстрая доставка</div>
                     <div class="why-item-text">
                         Мы доставляем в пределах МКАД за 30 минут, а если не успеем — 
@@ -86,13 +86,13 @@
         </div>
     </section>
 
-    <section class="products">
+    <section class="products" id="products">
         <div class="container">
             <div class="products-title common-title">выберите свой бургер</div>
             <div class="products-items">
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/1.png" alt="Burger 1">
+                        <img src="images/1.png" alt="Burger 1">
                     </div>
                     <div class="products-item-title">Бургер чеддер & бекон</div>
                     <div class="products-item-text">
@@ -101,8 +101,8 @@
                         сырный соус    
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">8 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="8">8 $</div>
                             <div class="products-item-weight">360 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -119,7 +119,7 @@
                 </div>
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/2.png" alt="Burger 2">
+                        <img src="images/2.png" alt="Burger 2">
                     </div>
                     <div class="products-item-title">BBQ с беконом и курицей</div>
                     <div class="products-item-text">
@@ -127,8 +127,8 @@
                         лук маринованный, салат Ромен, бекон, соус BBQ 
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">7 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="7">7 $</div>
                             <div class="products-item-weight">390 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -145,7 +145,7 @@
                 </div>
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/3.png" alt="Burger 3">
+                        <img src="images/3.png" alt="Burger 3">
                     </div>
                     <div class="products-item-title">Дабл биф бургер</div>
                     <div class="products-item-text">
@@ -153,8 +153,8 @@
                         соус бургер, горчица   
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">10 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="10">10 $</div>
                             <div class="products-item-weight">420 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -171,7 +171,7 @@
                 </div>   
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/4.png" alt="Burger 4">
+                        <img src="images/4.png" alt="Burger 4">
                     </div>
                     <div class="products-item-title">Баварский бургер</div>
                     <div class="products-item-text">
@@ -179,8 +179,8 @@
                         соус сырный, салат айсберг  
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">7 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="7">7 $</div>
                             <div class="products-item-weight">220 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -197,7 +197,7 @@
                 </div>   
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/5.png" alt="Burger 5">
+                        <img src="images/5.png" alt="Burger 5">
                     </div>
                     <div class="products-item-title">Бекон чизбургер</div>
                     <div class="products-item-text">
@@ -205,8 +205,8 @@
                         сырный соус, кетчуп, зелень
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">8 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="8">8 $</div>
                             <div class="products-item-weight">220 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -223,7 +223,7 @@
                 </div>   
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/6.png" alt="Burger 6">
+                        <img src="images/6.png" alt="Burger 6">
                     </div>
                     <div class="products-item-title">Индиана бургер</div>
                     <div class="products-item-text">
@@ -231,8 +231,8 @@
                         соус сырный, горчица, зелень   
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">9 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="9">9 $</div>
                             <div class="products-item-weight">320 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -249,7 +249,7 @@
                 </div>
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/7.png" alt="Burger 7">
+                        <img src="images/7.png" alt="Burger 7">
                     </div>
                     <div class="products-item-title">Вегги бургер</div>
                     <div class="products-item-text">
@@ -257,8 +257,8 @@
                         свежий томат, соус барбекю, соус сырный, салат айсберг   
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">8 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="8">8 $</div>
                             <div class="products-item-weight">280 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -275,7 +275,7 @@
                 </div>
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/8.png" alt="Burger 8">
+                        <img src="images/8.png" alt="Burger 8">
                     </div>
                     <div class="products-item-title">Плаксивый Джо</div>
                     <div class="products-item-text">
@@ -283,8 +283,8 @@
                         огурец маринованный, красный лук, сыр, перец халапеньо, кетчуп, зелень  
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">7 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="7">7 $</div>
                             <div class="products-item-weight">380 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -301,7 +301,7 @@
                 </div>
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/9.png" alt="Burger 9">
+                        <img src="images/9.png" alt="Burger 9">
                     </div>
                     <div class="products-item-title">Двойной чиз бургер</div>
                     <div class="products-item-text">
@@ -309,8 +309,8 @@
                         огурец маринованный, криспи лук, кетчуп, соус сырный, горчица, зелень  
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">11 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="11">11 $</div>
                             <div class="products-item-weight">400 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -327,7 +327,7 @@
                 </div>
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/10.png" alt="Burger 10">
+                        <img src="images/10.png" alt="Burger 10">
                     </div>
                     <div class="products-item-title">Фрешбургер</div>
                     <div class="products-item-text">
@@ -335,8 +335,8 @@
                         соус барбекю, соус сырный, салат айсберг, свежий томат  
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">9 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="9">9 $</div>
                             <div class="products-item-weight">300 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -353,7 +353,7 @@
                 </div>
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/11.png" alt="Burger 11">
+                        <img src="images/11.png" alt="Burger 11">
                     </div>
                     <div class="products-item-title">Цуккини бургер</div>
                     <div class="products-item-text">
@@ -361,8 +361,8 @@
                         огурец маринованный, сыр, горчичный соус, кетчуп, зелень   
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">8 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="8">8 $</div>
                             <div class="products-item-weight">320 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -379,7 +379,7 @@
                 </div>
                 <div class="products-item">
                     <div class="products-item-image">
-                        <img src="/images/12.png" alt="Burger 12">
+                        <img src="images/12.png" alt="Burger 12">
                     </div>
                     <div class="products-item-title">Двойной бургер чеддар</div>
                     <div class="products-item-text">
@@ -387,8 +387,8 @@
                         томат, кетчуп, двойной сыр чеддар, горчица, зелень  
                     </div>
                     <div class="products-item-extra">
-                        <div class="products-itam-info">
-                            <div class="products-item-price">9 $</div>
+                        <div class="products-item-info">
+                            <div class="products-item-price" data-base-price="9">9 $</div>
                             <div class="products-item-weight">360 гр</div>
                         </div>
                         <div class="products-item-action">
@@ -407,7 +407,7 @@
         </div>
     </section>
 
-    <section class="order">
+    <section class="order" id="order">
         <div class="container">
             <div class="order-title common-title">оформление заказа</div>
             <img src="images/order-image.png" alt="Burger in the box" class="order-image">
@@ -417,15 +417,15 @@
                 </div>
                 <div class="order-form-inputs">
                     <div class="order-form-input">
-                        <input type="text" placeholder="Ваш заказ">
+                        <input type="text" placeholder="Ваш заказ" id="burger">
                     </div>
                     <div class="order-form-input">
-                        <input type="text" placeholder="Ваше имя">
+                        <input type="text" placeholder="Ваше имя" id="name">
                     </div>
                     <div class="order-form-input">
-                        <input type="text" placeholder="Ваш телефон">
+                        <input type="text" placeholder="Ваш телефон" id="phone">
                     </div>
-                    <button class="button">Оформить заказ</button>
+                    <button class="button" id="order-action">Оформить заказ</button>
                 </div>
             </div>
         </div>
@@ -439,5 +439,7 @@
             <div class="rights">Все права защищены</div>
         </div>
     </footer>
+
+    <script src="scripts/scripts.js"></script>
 </body>
 </html>
